@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-11-06T01:49:41Z",
+  "timestamp" : "2022-11-06T08:22:38Z",
   "count_outdated" : 2575,
   "uniques_outdated" : 686,
-  "count" : 2607,
+  "count" : 2610,
   "uniques" : 701,
   "clones" : [
     {
       "timestamp": "2022-10-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -79,6 +79,13 @@
       "timestamp": "2022-11-02T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-06T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
