@@ -1,3 +1,11 @@
+2022-11-06T08:22:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3403570257 # 1003
+* notice: last 14d: unq all: 5 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 686 2575 / 701 2607
+* notice: next accum: outdated-unq outdated-all / unq all: 686 2575 / 701 2610
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -1 -1 / +1 +4 -0 -0 / 1 4
+* notice: removed / changed dates: [] / [2022-10-23 2022-11-06]
+
 2022-11-06T01:49:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3402482813 # 1002
 * notice: last 14d: unq all: 5 32
